--- a/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
+++ b/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
@@ -89,7 +89,7 @@
                                         placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn17">
-                                        <wm-form-field name="coi" displayname="Coi" show="true" primary-key="false" generator="assigned" key="coi" type="blob" widget="upload" maxchars="255"></wm-form-field>
+                                        <wm-form-field name="coi" displayname="Certificate of Insurance (COI)" show="true" primary-key="false" generator="assigned" key="coi" type="blob" widget="upload" maxchars="255"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn18">
                                         <wm-form-field name="insuranceCompany" displayname="Insurance Company" show="true" primary-key="false" generator="assigned" key="insuranceCompany" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
@@ -97,7 +97,7 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow7">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn19">
-                                        <wm-form-field name="feinNumber" displayname="Fein Number" show="true" primary-key="false" generator="assigned" key="feinNumber" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="feinNumber" displayname="FEIN Number" show="true" primary-key="false" generator="assigned" key="feinNumber" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn22">
                                         <wm-form-field name="insuranceExpires" displayname="Insurance Expires" show="true" primary-key="false" generator="assigned" key="insuranceExpires" type="date" widget="date" placeholder="Select date" outputformat="yyyy-MM-dd"
